Fixed header column spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.display-1 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
